added devicepixelratio to index for making it playable retina screens

--- a/Assets/WebGLTemplates/WineTemplate/index.html
+++ b/Assets/WebGLTemplates/WineTemplate/index.html
@@ -42,6 +42,7 @@
       } else {
         canvas.style.width = "100%";
         canvas.style.height = "100%";
+        config.devicePixelRatio = 1;
       }
       loadingBar.style.display = "block";
 
