--- a/VinLotteri/index.html
+++ b/VinLotteri/index.html
@@ -42,6 +42,7 @@
       } else {
         canvas.style.width = "100vw";
         canvas.style.height = "100vh";
+        config.devicePixelRatio = 1;
       }
       loadingBar.style.display = "block";
 
