new ui, updated to 2020.3fxx, updated webgl template

--- a/VinLotteri/index.html
+++ b/VinLotteri/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Vinlotteret</title>
+    <title>Vinlotteriet</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -39,9 +39,11 @@
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         container.className = "unity-mobile";
         config.devicePixelRatio = 1;
+				canvas.style.zIndex = 1;
       } else {
-        canvas.style.width = "100vw";
-        canvas.style.height = "100vh";
+        canvas.style.width = "100%";
+        canvas.style.height = "100%";
+				canvas.style.zIndex = 1;
         config.devicePixelRatio = 1;
       }
       loadingBar.style.display = "block";
